# inventory-management-exercise-rtsnrb

./: .copier-answers.yml  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
.github/: CODEOWNERS  pull_request_template.md
.github/workflows/: build_and_test.yml  dependabot.yml  lint_and_format.yml  pr_title_check.yml  release.yml  typing.yml
src/: alembic.ini  inventory.db
src/inventory_management_exercise/: __init__.py  db.py  main.py
src/inventory_management_exercise/api/routes/: base.py
src/inventory_management_exercise/api/routes/v1/: __init__.py  _architectures.py  _computers.py  _cpus.py  _hello_world.py  _manufacturers.py  _operating_systems.py  _router.py  _utils.py
src/inventory_management_exercise/api/routes/v1/tests/: test_architectures.py
src/inventory_management_exercise/migrations/: env.py
src/inventory_management_exercise/migrations/versions/: 615bcf03a452_initial_migration.py  9a2490884382_add_cpu_cores_and_cpu_count.py
src/inventory_management_exercise/models/: __init__.py  architecture.py  computer.py  cpu.py  manufacturer.py  operating_system.py
src/inventory_management_exercise/scripts/: generate_inventory_data.py  import_inventory.py  inventory_data.csv
src/inventory_management_exercise/tests/: test_main.py
